objects/Milestones__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date of Corresponding Milestone from Opportunity</description>
        <formula>if(ISPICKVAL(Milestone__c, &apos;Offers Accepted&apos;), Opportunity__r.Offer_Accepted__c, 
if(ISPICKVAL(Milestone__c, &apos;Offers Declined&apos;), Opportunity__r.Offer_Declined__c,
if(ISPICKVAL(Milestone__c, &apos;Offers Outstanding&apos;),Opportunity__r.Offer_Letter_Sent__c ,
if(ISPICKVAL(Milestone__c, &apos;Offer Letters Sent&apos;),Opportunity__r.Offer_Letter_Sent__c ,
if(ISPICKVAL(Milestone__c, &apos;Prelim Applications Approved&apos;), Opportunity__r.Prelim_App_Approved__c,
if(ISPICKVAL(Milestone__c, &apos;Prelim Applications Received&apos;), Opportunity__r.Preliminary_App_Received__c,
if(ISPICKVAL(Milestone__c, &apos;Prelim Applications Sent&apos;), Opportunity__r.Preliminary_App_Sent__c,
if(ISPICKVAL(Milestone__c, &apos;Recruitment Kit&apos;), Opportunity__r.Contact__r.Recruitment_Kit__c,
if(ISPICKVAL(Milestone__c, &apos;FINRA Effective&apos;), Opportunity__r.FINRA_Effective_Date__c,today()
         )
        )  
       )
      ) 
     ) 
    )
   )
  )
)</formula>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GDC__c</fullName>
        <description>GDC of Opportunity</description>
        <formula>Opportunity__r.Actual_GDC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GDC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <label>Milestone</label>
        <picklist>
            <picklistValues>
                <fullName>Offer Letters Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offers Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offers Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prelim Applications Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prelim Applications Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prelim Applications Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruitment Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINRA Effective</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Milestone</relationshipLabel>
        <relationshipName>Milestone</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Milestones</label>
    <nameField>
        <displayFormat>M{00000}</displayFormat>
        <label>Milestone Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>